--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,24 @@
             <artifactId>msgpack</artifactId>
             <version>0.6.12</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>org.jboss.marshalling</groupId>
+            <artifactId>jboss-marshalling</artifactId>
+            <version>1.3.0.CR9</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jboss.marshalling</groupId>
+            <artifactId>jboss-marshalling-serial</artifactId>
+            <version>1.3.0.CR9</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
+
+
 
 
 </project>
